--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -1,1 +1,15 @@
-
+<html>
+  <body>
+  <h1>Ciyrses</h1>
+  <ul>
+    <li>Apple</li>
+    <li>Banana</li>
+    <li>Grapes</li>
+  </ul>
+  <ol>
+    <li>1strank</li>
+    <li>2ndrank</li>
+    <li>3rdrank</li>
+  </ol>
+    </body>
+</html>
