--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -11,5 +11,11 @@
     <li>2ndrank</li>
     <li>3rdrank</li>
   </ol>
+    <li>Types of web programming languages<ol>
+      <li>html</li>
+      <li>css</li>
+      <li>javascript</li>
+  </ol></li>
+    
     </body>
 </html>
