--- a/Day-2/day-lab-task.html
+++ b/Day-2/day-lab-task.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
 <html>
-  
+  <head>
+    <title>Car Maniac</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <h1>Below are the links for different pages of Cars</h1>
+      <p class="p1">
+        <center>Welcome to the world of Cars</center>
+      </p>
+      <hr>
+      <ul>
+      <nav>
+        <li><a href="American_Cars.html" target="_blank">American Cars</a></li>
+        <li><a href="Japanese_Cars.html" target="_blank">Japanese Cars</a></li>
+      </nav>
+        </ul>
+    </header>
+    <p id="id1">image details</p>
+    <img src=.jpg"
+  </body>
 </html>
