updated with lab-class 2 updates

--- a/Day-2/home.html
+++ b/Day-2/home.html
@@ -15,9 +15,21 @@
       <nav>
         <li><a href="American_Cars.html" target="_blank">American Cars</a></li>
         <li><a href="Japanese_Cars.html" target="_blank">Japanese Cars</a></li>
+        <li><a href="About.html" target="_blank">About Page</a></li>
       </nav>
-        </ul>
+      </ul>
     </header>
+    <section>
+      <article>
+      <h2 class="p1 c1">Cars</h2>
+      <P class ="p1">Car details</P>
+      <ul type ="circle">
+        <li>Sunroof</li>
+        <li>Dct clutch</li>
+        <li>Car Name:Virtus</li>
+      </ul>
+      </article>
+    </section>
     <p id="id1">image details</p>
     <img src=.jpg"
   </body>
